--- a/USA/미니프로젝트_USA.ipynb
+++ b/USA/미니프로젝트_USA.ipynb
@@ -85,7 +85,7 @@
     "#  - 쉽게 말하면: NOAA-20 위성이 SUOMI의 동생처럼 뒤따라가며 찍은 산불 사진첩\n",
     "\n",
     "# MODIS C6.1 (MODIS Collection 6.1)\n",
-    "# 뭐야?: MODIS는 Terra와 Aqua라는 두 위성에 탑재된 Moderate Resolution Imaging Spectroradiometer 센서의 데이터야. \"C6.1\"은 Collection 6.1, 즉 6번째 버전의 업데이트판.\n",
+    "# MODIS는 Terra와 Aqua라는 두 위성에 탑재된 Moderate Resolution Imaging Spectroradiometer 센서의 데이터야. \"C6.1\"은 Collection 6.1, 즉 6번째 버전의 업데이트판.\n",
     "# 특징:\n",
     "# 해상도: 1km (VIIRS보다 덜 세밀함).\n",
     "# 관측 시간: Terra는 오전 10:30쯤, Aqua는 오후 1:30쯤 지나감.\n",
@@ -93,21 +93,20 @@
     "# 산불 데이터: \"MCD14\"라는 이름으로 FIRMS에서 제공. 산불 위치와 FRP를 탐지하지만, 해상도가 낮아서 작은 불은 놓칠 수 있어.\n",
     "# 쉽게 말하면: 오래된 형님 위성이 찍은 산불 사진첩의 6.1번째 버전이야. 좀 더 흐릿하지만 오래된 이야기를 들려줘!\n",
     "\n",
-    "# 차이점 비교\n",
-    "# 항목   SUOMI VIIRS C2   J1 VIIRS C2   MODIS C6.1\n",
-    "# 위성   Suomi NPP   NOAA-20 (JPSS-1)   Terra & Aqua\n",
-    "# 센서   VIIRS   VIIRS   MODIS\n",
-    "# 해상도   375m   375m   1km\n",
-    "# 관측 시간   1:30 AM/PM   2:20 AM/PM   10:30 AM, 1:30 PM\n",
-    "# 버전   Collection 2   Collection 2   Collection 6.1\n",
-    "# 장점   세밀하고 최신   SUOMI와 보완   긴 시간 기록\n",
-    "# 단점   짧은 역사   짧은 역사   덜 세밀함\n",
-    "# FIRMS 이름   VNP14IMG   VJ114IMG   MCD14\n",
-    "# 📌 이 프로젝트에서 뭐 쓸까?\n",
-    "# SUOMI VIIRS C2와 J1 VIIRS C2: 최신이고 해상도가 높아서 산불 위치와 피해 면적 예측에 더 정확할 거야. 특히 375m 해상도는 작은 불도 잡아내니까 EDA와 Folium 시각화에 딱!\n",
-    "# MODIS C6.1: 과거 데이터(20년 이상)를 보고 싶을 때 유용해. 예를 들어, \"과거 산불 패턴이 지금이랑 얼마나 달라졌나?\" 같은 분석에 쓰면 좋을듯.\n",
-    "# 추천: 프로젝트에선 주로 VIIRS C2(SUOMI + J1)를 쓰고, 필요하면 MODIS C6.1로 과거 비교를 추가하는 전략 어때?\n",
-    "# 💡 최적화된 프로젝트 계획 (데이터 반영)"
+    "# 차이점        비교\n",
+    "# 항목          SUOMI VIIRS C2      J1 VIIRS C2         MODIS C6.1\n",
+    "# 위성          Suomi NPP           NOAA-20 (JPSS-1)    Terra & Aqua\n",
+    "# 센서          VIIRS               VIIRS               MODIS\n",
+    "# 해상도        375m                375m                1km\n",
+    "# 관측 시간     1:30 AM/PM          2:20 AM/PM          10:30 AM, 1:30 PM\n",
+    "# 버전          Collection 2        Collection 2        Collection 6.1\n",
+    "# 장점          세밀하고 최신       SUOMI와 보완        긴 시간 기록\n",
+    "# 단점          짧은 역사           짧은 역사           덜 세밀함\n",
+    "# FIRMS 이름    VNP14IMG            VJ114IMG            MCD14\n",
+    "\n",
+    "# SUOMI VIIRS C2와 J1 VIIRS C2: 최신이고 해상도가 높아서 산불 위치와 피해 면적 예측에 더 정확. 특히 375m 해상도는 작은 불도 잡아내니까 EDA와 Folium 시각화에 딱!\n",
+    "# MODIS C6.1: 과거 데이터(20년 이상)를 보고 싶을 때 유용해. 예를 들어, \"과거 산불 패턴이 지금이랑 얼마나 달라졌나?\" 같은 분석에 쓰면 좋음.\n",
+    "# 추천: 프로젝트에선 주로 VIIRS C2(SUOMI + J1)를 쓰고, 필요하면 MODIS C6.1로 과거 비교"
    ]
   },
   {
