--- a/Main/Australia/미니프로젝트_Australia.ipynb
+++ b/Main/Australia/미니프로젝트_Australia.ipynb
@@ -200,20 +200,8 @@
     "import requests\n",
     "\n",
     "# 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "latitude = 37.5665  # 서울 근처\n",
-    "longitude = 126.9780\n",
-    "\n",
-    "# # 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "# latitude = 36.7783  # 캘리포니아 근처\n",
-    "# longitude = -119.4179\n",
-    "\n",
-    "# # 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "# latitude = -33.8688  # 시드니 근처\n",
-    "# longitude = 151.2093\n",
-    "\n",
-    "# # 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "# latitude = 53.7267  # 브리티시컬럼비아 근처\n",
-    "# longitude = -127.6476\n",
+    "latitude = -33.8688  # 시드니 근처\n",
+    "longitude = 151.2093\n",
     "\n",
     "# 요청할 기간 (2015년 1월 1일 ~ 2024년 3월 15일)\n",
     "start_date = \"20150101\"\n",
@@ -231,7 +219,7 @@
     "        file.write(response.text)\n",
     "    print(\"✅ 기상 데이터 다운로드 완료! (weather_data.csv)\")\n",
     "else:\n",
-    "    print(\"❌ 데이터 요청 실패!\", response.status_code)\n"
+    "    print(\"❌ 데이터 요청 실패!\", response.status_code)"
    ]
   },
   {
@@ -258,9 +246,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pk_dl_202503_kernel",
    "language": "python",
-   "name": "python3"
+   "name": "pk_dl_202503"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
