--- a/Main/Korea/미니프로젝트_Korea.ipynb
+++ b/Main/Korea/미니프로젝트_Korea.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "uHAN7Ar6DShP",
     "outputId": "0f69851e-ede4-4cd2-f758-89e0b44031bb"
@@ -202,18 +202,6 @@
     "# 기상 데이터 요청할 지역 (위도, 경도)\n",
     "latitude = 37.5665  # 서울 근처\n",
     "longitude = 126.9780\n",
-    "\n",
-    "# # 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "# latitude = 36.7783  # 캘리포니아 근처\n",
-    "# longitude = -119.4179\n",
-    "\n",
-    "# # 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "# latitude = -33.8688  # 시드니 근처\n",
-    "# longitude = 151.2093\n",
-    "\n",
-    "# # 기상 데이터 요청할 지역 (위도, 경도)\n",
-    "# latitude = 53.7267  # 브리티시컬럼비아 근처\n",
-    "# longitude = -127.6476\n",
     "\n",
     "# 요청할 기간 (2015년 1월 1일 ~ 2024년 3월 15일)\n",
     "start_date = \"20150101\"\n",
@@ -258,9 +246,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pk_dl_202503_kernel",
    "language": "python",
-   "name": "python3"
+   "name": "pk_dl_202503"
   },
   "language_info": {
    "codemirror_mode": {
@@ -272,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
