--- a/Main/Korea/미니프로젝트_Korea.ipynb
+++ b/Main/Korea/미니프로젝트_Korea.ipynb
@@ -181,6 +181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 기상데이터 생성 코드 weather_data.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -223,20 +230,489 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 날씨데이터 불러오기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "3gE0zszxDShQ"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "k_w_df = pd.read_csv(\"./weather_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "id": "HVto7c46DShQ"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>DOY</th>\n",
+       "      <th>T2M</th>\n",
+       "      <th>WS2M</th>\n",
+       "      <th>RH2M</th>\n",
+       "      <th>PRECTOTCORR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-7.77</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>67.56</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-6.94</td>\n",
+       "      <td>4.03</td>\n",
+       "      <td>70.77</td>\n",
+       "      <td>0.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-3.83</td>\n",
+       "      <td>2.04</td>\n",
+       "      <td>79.45</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>95.19</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>88.55</td>\n",
+       "      <td>1.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3357</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>71</td>\n",
+       "      <td>3.66</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>81.11</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3358</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>72</td>\n",
+       "      <td>4.62</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>87.45</td>\n",
+       "      <td>0.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3359</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>73</td>\n",
+       "      <td>3.47</td>\n",
+       "      <td>3.05</td>\n",
+       "      <td>84.14</td>\n",
+       "      <td>0.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3360</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>74</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>83.30</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3361</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>75</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>85.99</td>\n",
+       "      <td>0.06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3362 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      YEAR  DOY   T2M  WS2M   RH2M  PRECTOTCORR\n",
+       "0     2015    1 -7.77  6.20  67.56         0.03\n",
+       "1     2015    2 -6.94  4.03  70.77         0.31\n",
+       "2     2015    3 -3.83  2.04  79.45         0.00\n",
+       "3     2015    4  1.25  1.80  95.19         0.03\n",
+       "4     2015    5  1.77  2.01  88.55         1.77\n",
+       "...    ...  ...   ...   ...    ...          ...\n",
+       "3357  2024   71  3.66  2.10  81.11         0.01\n",
+       "3358  2024   72  4.62  1.80  87.45         0.86\n",
+       "3359  2024   73  3.47  3.05  84.14         0.13\n",
+       "3360  2024   74  5.00  2.15  83.30         0.03\n",
+       "3361  2024   75  5.65  3.39  85.99         0.06\n",
+       "\n",
+       "[3362 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_w_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 산불 데이터 불러오기(M-C61제외)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_ar_j_df = pd.read_csv(\"./data/fire_archive_J1V-C2_589626.csv\")\n",
+    "k_ar_s_df = pd.read_csv(\"./data/fire_archive_SV-C2_589627.csv\")\n",
+    "k_nr_j_df = pd.read_csv(\"./data/fire_nrt_J1V-C2_589626.csv\")\n",
+    "k_nr_s_df = pd.read_csv(\"./data/fire_nrt_SV-C2_589627.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>brightness</th>\n",
+       "      <th>scan</th>\n",
+       "      <th>track</th>\n",
+       "      <th>acq_date</th>\n",
+       "      <th>acq_time</th>\n",
+       "      <th>satellite</th>\n",
+       "      <th>instrument</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>version</th>\n",
+       "      <th>bright_t31</th>\n",
+       "      <th>frp</th>\n",
+       "      <th>daynight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37.48544</td>\n",
+       "      <td>129.05594</td>\n",
+       "      <td>330.99</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>425</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>290.79</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>D</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36.01884</td>\n",
+       "      <td>129.38626</td>\n",
+       "      <td>298.11</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>1645</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>281.65</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>36.01082</td>\n",
+       "      <td>129.38496</td>\n",
+       "      <td>302.22</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>1645</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>280.74</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36.00773</td>\n",
+       "      <td>129.37567</td>\n",
+       "      <td>313.00</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>1645</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>279.03</td>\n",
+       "      <td>1.05</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>36.02640</td>\n",
+       "      <td>129.39183</td>\n",
+       "      <td>299.57</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>1645</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>283.70</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1773</th>\n",
+       "      <td>36.95362</td>\n",
+       "      <td>126.61665</td>\n",
+       "      <td>301.19</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>2025-03-16</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>271.79</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1774</th>\n",
+       "      <td>35.49949</td>\n",
+       "      <td>129.35408</td>\n",
+       "      <td>295.29</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2025-03-16</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>273.44</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1775</th>\n",
+       "      <td>35.36789</td>\n",
+       "      <td>128.48575</td>\n",
+       "      <td>309.43</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>2025-03-16</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>273.34</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1776</th>\n",
+       "      <td>35.08447</td>\n",
+       "      <td>128.98833</td>\n",
+       "      <td>319.04</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2025-03-16</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>272.70</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1777</th>\n",
+       "      <td>35.09921</td>\n",
+       "      <td>128.86174</td>\n",
+       "      <td>304.27</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2025-03-16</td>\n",
+       "      <td>1717</td>\n",
+       "      <td>N20</td>\n",
+       "      <td>VIIRS</td>\n",
+       "      <td>n</td>\n",
+       "      <td>2.0NRT</td>\n",
+       "      <td>273.90</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1778 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      latitude  longitude  brightness  scan  track    acq_date  acq_time  \\\n",
+       "0     37.48544  129.05594      330.99  0.40   0.37  2024-12-01       425   \n",
+       "1     36.01884  129.38626      298.11  0.39   0.44  2024-12-01      1645   \n",
+       "2     36.01082  129.38496      302.22  0.39   0.44  2024-12-01      1645   \n",
+       "3     36.00773  129.37567      313.00  0.39   0.44  2024-12-01      1645   \n",
+       "4     36.02640  129.39183      299.57  0.39   0.44  2024-12-01      1645   \n",
+       "...        ...        ...         ...   ...    ...         ...       ...   \n",
+       "1773  36.95362  126.61665      301.19  0.39   0.36  2025-03-16      1717   \n",
+       "1774  35.49949  129.35408      295.29  0.40   0.37  2025-03-16      1717   \n",
+       "1775  35.36789  128.48575      309.43  0.39   0.36  2025-03-16      1717   \n",
+       "1776  35.08447  128.98833      319.04  0.40   0.37  2025-03-16      1717   \n",
+       "1777  35.09921  128.86174      304.27  0.40   0.37  2025-03-16      1717   \n",
+       "\n",
+       "     satellite instrument confidence version  bright_t31   frp daynight  \n",
+       "0          N20      VIIRS          n  2.0NRT      290.79  2.76        D  \n",
+       "1          N20      VIIRS          n  2.0NRT      281.65  1.62        N  \n",
+       "2          N20      VIIRS          n  2.0NRT      280.74  0.87        N  \n",
+       "3          N20      VIIRS          n  2.0NRT      279.03  1.05        N  \n",
+       "4          N20      VIIRS          n  2.0NRT      283.70  1.72        N  \n",
+       "...        ...        ...        ...     ...         ...   ...      ...  \n",
+       "1773       N20      VIIRS          n  2.0NRT      271.79  0.39        N  \n",
+       "1774       N20      VIIRS          n  2.0NRT      273.44  0.49        N  \n",
+       "1775       N20      VIIRS          n  2.0NRT      273.34  0.96        N  \n",
+       "1776       N20      VIIRS          n  2.0NRT      272.70  0.80        N  \n",
+       "1777       N20      VIIRS          n  2.0NRT      273.90  0.88        N  \n",
+       "\n",
+       "[1778 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_nr_j_df"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "HVto7c46DShQ"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
